# flutter_llamacpp

./: .gitignore  .gitmodules  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_llamacpp_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_llamacpp.podspec
ios/Classes/: FlutterLlamacppPlugin.swift  LlamaBridgeSymbolAnchor.mm
lib/: flutter_llamacpp.dart
lib/src/: chat_completion.dart  chat_message.dart  llama_engine.dart  llama_model.dart
lib/src/ffi/: llama_bindings.dart  llama_library.dart
native/: CMakeLists.txt  llama_bridge.cpp  llama_bridge.h
